@@ -161,16 +161,15 @@ xfce_mixer_option_create_contents (XfceMixerOption *option)
   GtkWidget       *label;
   const GList     *iter;
   const gchar     *active_option;
-  gchar           *track_label;
+  const gchar     *track_label;
   gchar           *title;
   gint             i;
 
   gtk_box_set_homogeneous (GTK_BOX (option), FALSE);
   gtk_box_set_spacing (GTK_BOX (option), 12);
 
-  g_object_get (option->track, "label", &track_label, NULL);
+  track_label = xfce_mixer_get_track_label (option->track);
   title = g_strdup_printf ("%s:", track_label);
-  g_free (track_label);
 
   label = gtk_label_new (title);
   gtk_box_pack_start (GTK_BOX (option), label, FALSE, FALSE, 0);
